2011-01-06  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed issue #16940: htmlArea RTE: Log magic image creation failures to syslog
	* Fixed bug #16893: htmlArea RTE: Fatal error on invoking the RTE

2011-01-06  Steffen Gebert  <steffen@steffen-gebert.de>

	* Fixed bug #16828: missing XCLASS statement in t3lib/class.t3lib_compressor.php

2011-01-06  Chrisstian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #16933: Remove XCLASS definition from t3lib_autoload
	* Fixed bug #16931: [Caching framework] APC backend test setRemovesTagsFromPreviousSet() fails

2011-01-06  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #16918: Edit Permissions Link in List View does not work (Thanks to Sebastian Michaelsen)
	* Fixed bug #16930: Module menu lose selection on collapse section

2011-01-05  Steffen Gebert  <steffen@steffen-gebert.de>

	* Fixed bug #16920: Adjust ExtJS context-menu styling

2011-01-05  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #16922: RowExpander icon is cut in expand mode
	* Fixed bug #16900: [Cache] Filebackend fails on windows
	* Fixed bug #16901: [test] t3lib_db_PreparedStatement fails

2011-01-05  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #7837: Remove option if icon generation is needed

2011-01-04  Jeff Segars  <jeff@webempoweredchurch.org>

	* Follow-up to #15853: Make admin panel styling more bulletproof and remove duplicate styles
	* Fixed bug #16906: Link from Install Tool to User Settings should make User Settings active in the module menu (Thanks to Georg Ringer)
	* Fixed bug #15466: meaningfulTempFilePrefix does not convert Umlauts and special characters (Thanks to Sebastian Michaelsen)

2011-01-03  Jigal van Hemert  <jigal@xs4all.nl>

	* Follow-up to #16780: PHP warning in any system BE module

2011-01-03  Jigal van Hemert  <jigal@xs4all.nl>

	* Fixed bug #15712: Headline in non latin charsets will break after 100 - substr is not multibyte safe
	* Fixed bug #16707: Read from and write to same file hangs GM on network file system
