@@ -75,13 +75,6 @@
 							<label>LLL:EXT:css_styled_content/locallang_db.xml:tt_content.tx_cssstyledcontent_acctables_nostyles</label>
 							<config>
 								<type>check</type>
-								<renderInverted>1</renderInverted>
-								<items type="array">
-									<numIndex index="1" type="array">
-										<numIndex index="0">LLL:EXT:lang/locallang_core.xml:labels.enabled</numIndex>
-										<numIndex index="1">1</numIndex>
-									</numIndex>
-								</items>
 							</config>
 						</TCEforms>
 					</acctables_nostyles>
